<resources>
    <string name="app_name">ChoiceCrafter</string>
    <string name="navigation_drawer_open">Deschide meniul de navigare</string>
    <string name="navigation_drawer_close">Închide meniul de navigare</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Antet de navigare</string>
    <string name="action_settings">Setări</string>
    <string name="change_language">Schimbă limba</string>
    <string name="settings">Setări</string>
    <string name="settings_description">Personalizează modul în care Choice Crafter funcționează pentru tine.</string>
    <string name="settings_language_section_title">Limbă</string>
    <string name="settings_theme_section_title">Temă</string>
    <string name="settings_theme_toggle_label">Mod întunecat</string>
    <string name="settings_font_size_section_title">Dimensiune text</string>
    <string name="settings_theme_toggle_enable_dark">Comută la modul întunecat</string>
    <string name="settings_theme_toggle_enable_light">Comută la modul luminos</string>
    <string name="settings_notification_section_title">Preferințe de notificare</string>
    <string name="settings_notification_activity_started">Actualizări despre activități</string>
    <string name="settings_notification_colleague_activity">Actualizări despre activitatea colegilor</string>
    <string name="settings_notification_points_milestone">Praguri de puncte</string>
    <string name="settings_notification_comment_added">Comentarii la activitățile tale</string>
    <string name="settings_notification_chat_messages">Mesaje din chat</string>
    <string name="settings_language_english">Engleză</string>
    <string name="settings_language_romanian">Română</string>
    <string-array name="font_size_options">
        <item>Mic</item>
        <item>Implicit</item>
        <item>Mare</item>
    </string-array>
    <string name="notification_chat_channel_name">Mesaje din chat</string>
    <string name="notification_chat_channel_description">Notificări atunci când primești un mesaj nou.</string>
    <string name="notification_chat_message_fallback">Ai un mesaj nou.</string>
    <string name="notification_motivational_reminder_title">Păstrează-ți seria</string>
    <string name="notification_motivational_reminder_message">Rezervă câteva minute astăzi pentru activități și menține-ți seria!</string>
    <string name="notification_generic_message">Ai o notificare nouă.</string>
    <string name="notification_streak_lost_title">Seria s-a întrerupt</string>
    <string name="notification_streak_lost_message">Ai pierdut seria, dar o poți relua chiar acum! Reia activitățile și revino în formă.</string>
    <string name="notification_inactivity_title">Revino la activități</string>
    <string name="notification_inactivity_message">Au trecut %1$d zile de la ultima activitate. Hai să te reconectezi și să continui progresul!</string>
    <string name="notification_inactivity_no_activity_message">Încă nu ai finalizat nicio activitate. Începe una astăzi pentru a porni seria!</string>
    <string name="title_home">Acasă</string>
    <string name="title_colleagues_activity">Activitatea colegilor</string>
    <string name="title_news">Știri</string>
    <string name="title_statistics">Statistici</string>
    <string name="title_inbox">Notificări</string>
    <string name="title_messages">Mesaje</string>
    <string name="title_settings">Setări</string>
    <string name="title_course_activities">Activitățile cursului</string>
    <string name="title_activity">Activitate</string>
    <string name="title_module">Modul</string>
    <string name="title_learning_path">Traseu de învățare</string>
    <string name="title_recommendation">Recomandare</string>
    <string name="menu_home">Acasă</string>
    <string name="menu_gallery">Galerie</string>
    <string name="menu_slideshow">Diaporamă</string>
    <string name="course_activities">Activitățile cursului</string>
    <string name="hello_blank_fragment">Salut, fragment gol</string>
    <string name="title_activity_login">Autentificare</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Parolă</string>
    <string name="prompt_registration_code">Cod de înregistrare</string>
    <string name="action_sign_in">Autentificare</string>
    <string name="action_register">Înregistrare</string>
    <string name="action_sign_in_short">Autentificare</string>
    <string name="welcome">Bine ai venit!</string>
    <string name="invalid_username">Nume de utilizator nevalid</string>
    <string name="invalid_password">Parola trebuie să aibă peste 5 caractere</string>
    <string name="login_failed">Autentificarea a eșuat</string>
    <string name="title_activity_register">Înregistrare</string>
    <string name="action_logout">Deconectare</string>
    <string name="open_nav">Deschide\n</string>
    <string name="close_nav">Închide</string>
    <string name="send_feedback">Trimite feedback</string>
    <string name="feedback_description">Citim fiecare mesaj. Spune-ne ce funcționează și cum te putem ajuta mai bine.</string>
    <string name="feedback_name_hint">Numele tău (opțional)</string>
    <string name="feedback_email_hint">Adresă de e-mail</string>
    <string name="feedback_subject_hint">Subiect</string>
    <string name="feedback_message_hint">Cum te putem ajuta?</string>
    <string name="feedback_submit">Trimite feedback</string>
    <string name="feedback_subject_error">Adaugă un subiect.</string>
    <string name="feedback_message_error">Scrie mesajul tău.</string>
    <string name="feedback_email_error">Te rugăm să oferi o adresă de e-mail.</string>
    <string name="feedback_submission_success">Mulțumim! Feedback-ul tău a fost trimis.</string>
    <string name="feedback_submission_error">Nu am putut trimite feedback-ul. Încearcă din nou în scurt timp.</string>
    <string name="modules">Module</string>
    <string name="activities">Activități</string>
    <string name="tasks">Sarcini</string>
    <string name="reactions">Reacții</string>
    <string name="comments">Comentarii</string>
    <string name="like_icon_description">Reacții la activitate</string>
    <string name="terms_title">Termeni și condiții</string>
    <string name="terms_message">Prin înregistrare, ești de acord ca datele stocate în aplicație să poată fi folosite în scopuri științifice.</string>
    <string name="terms_dialog_title">Prelucrarea datelor și confidențialitate</string>
    <string name="terms_dialog_intro">Înainte să îți creezi contul, te rugăm să consulți modul în care îți gestionăm informațiile.</string>
    <string name="terms_dialog_collect_title">Ce date colectăm</string>
    <string name="terms_dialog_collect_body">Numele, adresa de e-mail și codul de înregistrare pentru a-ți crea contul ChoiceCrafter și a-ți activa accesul la curs.</string>
    <string name="terms_dialog_use_title">Cum le folosim</string>
    <string name="terms_dialog_use_body">Folosim aceste date pentru a personaliza recomandările, a urmări progresul anonim și a confirma participarea ta la activitățile de cercetare.</string>
    <string name="terms_dialog_protect_title">Cum le protejăm</string>
    <string name="terms_dialog_protect_body">Datele tale sunt criptate în tranzit și în repaus, stocate pe servere conforme GDPR și accesate doar de membrii autorizați ai echipei de cercetare.</string>
    <string name="terms_dialog_rights_title">Drepturile tale</string>
    <string name="terms_dialog_rights_body">Poți solicita oricând o copie, actualizarea sau ștergerea datelor tale personale contactând echipa de cercetare. Vom răspunde în termenele prevăzute de GDPR.</string>
    <string name="terms_dialog_footer">Apasă De acord pentru a continua și a confirma că îți dai consimțământul pentru această prelucrare.</string>
    <string name="register_name_privacy_notice">Numele tău va rămâne anonim în statistici, fluxuri și clasamente, dar te rugăm să alegi un nume descriptiv pentru secțiunea de mesagerie.</string>
    <string name="register_password_requirement">Parola trebuie să conțină cel puțin 6 caractere.</string>
    <string name="register_privacy_disclosure">Îți colectăm numele, adresa de e-mail și codul de înregistrare pentru a-ți crea contul ChoiceCrafter, a personaliza recomandările și a verifica accesul la curs. Datele tale sunt criptate în tranzit și în repaus, stocate pe servere conforme GDPR și accesate doar de personal autorizat al echipei de cercetare. Prin înregistrare confirmi că datele sunt prelucrate în conformitate cu GDPR și că poți solicita oricând actualizarea sau ștergerea lor.</string>
    <string name="error_registration_code_required">Introdu codul de înregistrare.</string>
    <string name="error_registration_code_invalid">Cod de înregistrare invalid.</string>
    <string name="content_description_password_hidden">Arată parola</string>
    <string name="content_description_password_visible">Ascunde parola</string>
    <string name="agree">De acord</string>
    <string name="cancel">Anulează</string>
    <string name="placeholder_module_title">Titlu modul</string>
    <string name="placeholder_module_description">Descriere modul</string>
    <string name="module_activities_count">Activități: %1$d</string>
    <string name="module_progress_percentage">Progres: %1$d%%</string>
    <string name="module_progress_percentage_placeholder">Progres: 0%</string>
    <string name="placeholder_default_count">0</string>
    <string name="placeholder_user_name">Nume</string>
    <string name="learning_path_structure_header">Prezentare generală a structurii</string>
    <string name="learning_path_module_summary_format">Module: %1$d</string>
    <string name="learning_path_activity_summary_format">Activități independente: %1$d</string>
    <string name="learning_path_module_summary_placeholder">Module: --</string>
    <string name="learning_path_activity_summary_placeholder">Activități independente: --</string>
    <string name="learning_path_no_structure_placeholder">Detaliile structurii nu sunt disponibile încă pentru acest traseu de învățare.</string>
    <string name="nav_header_user_name">Andrei</string>
    <string name="nav_header_user_email">andrei@gmail.com</string>
    <string name="content_description_flame_icon">Pictogramă flacără</string>
    <string name="personal_statistics_streak">Serie de 5 zile</string>
    <string name="content_description_medal_icon">Pictogramă medalie</string>
    <string name="personal_statistics_points">640 de puncte</string>
    <string name="content_description_motivational_icon">Pictogramă motivațională</string>
    <string name="personal_statistics_view_badges">Vezi ghidul de insigne</string>
    <string name="personal_statistics_badges_empty_state">Câștigă insigne prin învățare consecventă, comentarii și discuții cu asistentul.</string>
    <string name="personal_statistics_recent_activity_title">Activități recente</string>
    <string name="personal_statistics_badge_icon_content_description">Pictogramă insignă</string>
    <string name="badge_points_summary_format">+%1$d pct</string>
    <string name="badge_points_detail_format">%1$d puncte</string>
    <string name="badge_status_unlocked">Deblocată</string>
    <string name="badge_status_locked">Blocată</string>
    <string name="title_badges">Ghidul insignelor</string>
    <string name="learning_path_title_placeholder">Titlul traseului de învățare</string>
    <string name="learning_path_description_placeholder">Descrierea traseului de învățare</string>
    <string name="chat_message_sender_placeholder">Expeditor</string>
    <string name="chat_message_text_placeholder">Mesaj</string>
    <string name="chat_message_time_placeholder">12:00</string>
    <string name="home">Acasă</string>
    <string name="inbox">Notificări</string>
    <string name="messages">Mesaje</string>
    <string name="logout">Deconectare</string>
</resources>