<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/inboxFragment"
            android:icon="@drawable/ic_notification"
            android:title="@string/inbox"/>

        <item
            android:id="@+id/messagesFragment"
            android:icon="@drawable/ic_paper_plane"
            android:title="@string/messages"/>

        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/feedbackFragment"
                android:icon="@drawable/ic_feedback"
                android:title="@string/send_feedback"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_user_logout"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>