<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:id="@+id/settings_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_extra_large">

            <TextView
                android:id="@+id/text_slideshow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_description"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/text_primary"
                android:paddingBottom="@dimen/spacing_extra_large" />

            <TextView
                android:id="@+id/language_section_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_language_section_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:paddingBottom="@dimen/spacing_small" />

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_extra_large"
                android:entries="@array/language_options" />

            <TextView
                android:id="@+id/theme_section_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_theme_section_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:paddingTop="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_theme_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_extra_large"
                android:text="@string/settings_theme_toggle_label"
                app:useMaterialThemeColors="true" />

            <TextView
                android:id="@+id/font_size_section_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_font_size_section_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:paddingTop="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small" />

            <Spinner
                android:id="@+id/font_size_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_extra_large"
                android:entries="@array/font_size_options" />

            <TextView
                android:id="@+id/notification_section_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_section_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:paddingBottom="@dimen/spacing_small" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_notification_activity_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_activity_started"
                android:layout_marginBottom="@dimen/spacing_medium" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_notification_colleague_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_colleague_activity"
                android:layout_marginBottom="@dimen/spacing_medium" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_notification_points_milestone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_points_milestone"
                android:layout_marginBottom="@dimen/spacing_medium" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_notification_comment_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_comment_added"
                android:layout_marginBottom="@dimen/spacing_medium" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_notification_chat_messages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_notification_chat_messages"
                android:layout_marginBottom="@dimen/spacing_medium" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
