<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_chat_message_sent"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:id="@+id/chatMessageSender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_message_sender_placeholder"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/chatMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/chat_message_text_placeholder"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/chatMessageTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/chat_message_time_placeholder"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>
